--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <div class="header-inner">
 
         <!-- LIGHT/DARK MODE BUTTON -->
-        <div class="theme-toggle" id="theme-toggle" aria-label="Toggle dark and light mode">
+        <div class="theme-toggle" id="theme-toggle">
           <div class="toggle-switch">
             <span class="toggle-knob"><span class="toggle-icon toggle-icon--sun">&#9788;</span></span>
           </div>
@@ -64,7 +64,7 @@
 
             <!-- CTA Button linking back to home -->
             <div class="about-cta-wrapper">
-              <a class="btn btn--outline" href="home.html" id="home-page-btn">
+              <a class="btn btn--outline" href="index.html" id="home-page-btn">
                 Home Page
               </a>
             </div>
@@ -80,7 +80,7 @@
           <h2 class="faq-title">FAQ</h2>
 
           <!-- FAQ LIST -->
-          <ul class="faq-list" aria-label="Frequently Asked Questions">
+          <ul class="faq-list">
 
             <!-- FAQ Item 1 -->
             <li class="faq-item" id="faq-item-1">
@@ -92,7 +92,7 @@
                 <span class="faq-item__question-text">
                   Lorem ipsum odor amet, consectetuer adipiscing elit.
                 </span>
-                <span class="faq-item__icon" aria-hidden="true">+</span>
+                <span class="faq-item__icon">+</span>
               </button>
               <div class="faq-item__answer" id="faq-answer-1" hidden>
                 <p>Answer content goes here.</p>
@@ -109,7 +109,7 @@
                 <span class="faq-item__question-text">
                   Lorem ipsum odor amet, consectetuer adipiscing elit.
                 </span>
-                <span class="faq-item__icon" aria-hidden="true">+</span>
+                <span class="faq-item__icon">+</span>
               </button>
               <div class="faq-item__answer" id="faq-answer-2" hidden>
                 <p>Answer content goes here.</p>
@@ -126,7 +126,7 @@
                 <span class="faq-item__question-text">
                   Lorem ipsum odor amet, consectetuer adipiscing elit.
                 </span>
-                <span class="faq-item__icon" aria-hidden="true">+</span>
+                <span class="faq-item__icon">+</span>
               </button>
               <div class="faq-item__answer" id="faq-answer-3" hidden>
                 <p>Answer content goes here.</p>
@@ -145,11 +145,11 @@
       <div class="footer-container">
 
         <!-- CONTACT INFO -->
-        <nav class="footer-nav" aria-label="Footer navigation">
+        <nav class="footer-nav">
           <ul class="footer-nav-list">
             <li class="footer-nav-item">
               <a href="mailto:shannaaglupos@gmail.com" class="footer-nav-link footer-nav-link--email">
-                Email <span class="footer-nav__link-icon" aria-hidden="true">&#8599;</span>
+                Email <span class="footer-nav__link-icon">&#8599;</span>
               </a>
             </li>
             <li class="footer-nav-item">
@@ -159,7 +159,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                LinkedIn <span class="footer-nav__link-icon" aria-hidden="true">&#8599;</span>
+                LinkedIn <span class="footer-nav__link-icon">&#8599;</span>
               </a>
             </li>
           </ul>
@@ -167,8 +167,8 @@
 
         <!-- BACK TO TOP BUTTON -->
         <div class="footer-back-to-top-wrapper">
-          <a href="#top" class="back-to-top-btn" id="back-to-top" aria-label="Back to top">
-            <span class="back-to-top-icon" aria-hidden="true">&#8593;</span>
+          <a href="#top" class="back-to-top-btn" id="back-to-top">
+            <span class="back-to-top-icon">&#8593;</span>
           </a>
         </div>
 
